--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -678,10 +678,6 @@ video {
   margin-bottom: 2rem;
 }
 
-.-ms-10 {
-  margin-inline-start: -2.5rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -718,20 +714,12 @@ video {
   margin-inline-end: 0.75rem;
 }
 
-.ms-10 {
-  margin-inline-start: 2.5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.ms-8 {
-  margin-inline-start: 2rem;
 }
 
 .inline-block {
@@ -1098,10 +1086,6 @@ video {
   padding-inline-end: 4rem;
 }
 
-.ps-10 {
-  padding-inline-start: 2.5rem;
-}
-
 .ps-16 {
   padding-inline-start: 4rem;
 }
@@ -1128,10 +1112,6 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.ps-14 {
-  padding-inline-start: 3.5rem;
 }
 
 .text-left {
@@ -1177,11 +1157,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .font-extralight {
@@ -1245,11 +1220,11 @@ video {
 }
 
 .w-less {
-  width: calc(100vw - 2rem);
+  width: calc(100dvw - 2rem);
 }
 
 .w-main-container {
-  width: calc(100vw - 60px)
+  width: calc(100dvw - 60px)
 }
 
 .yellow {
